# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/snapshot.py:
  Remove all references to self.settings[spec_prefix] and remove some now
  useless functions that remove the prefix from certain spec settings

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py:
  Reorganize init for snapshot target

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  Try to import portage.util before portage_util

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  Add validate_values() and compare_key() functions to Spec class

  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/__init__.py, modules/catalyst/config.py,
  modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/snapshot.py:
  Add new global config singleton object and Spec class and convert snapshot
  and generic targets to use it

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/__init__.py:
  Add base singleton class definition

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/lock.py:
  More replacements of print statement with msg()

  12 Jan 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> -README.txt,
  -README.txt, bootloader-setup.sh, -gamecd.motd.txt, -gamecd.motd.txt,
  -generic.motd.txt, -generic.motd.txt, -livecd.motd.txt, -livecd.motd.txt,
  -livecd-bash_profile, -livecd-bash_profile, -livecd-bashrc,
  -livecd-bashrc, -livecd-local.start, -livecd-local.start,