@@ -2,6 +2,11 @@
 # Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 
+  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  modules/catalyst/target/generic_stage.py,
+  modules/catalyst/target/snapshot.py:
+  Don't pass conf_values or addlargs to target __init__()
+
   13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
   modules/catalyst/target/generic_stage.py,
